--- a/WebApiSF/Views/Musica/Edit.cshtml
+++ b/WebApiSF/Views/Musica/Edit.cshtml
@@ -1,16 +1,16 @@
 ﻿@model WebApiSF.Models.MusicModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Adicionar</h1>
+<h1>Editar</h1>
 
 <h4>Musica</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ID" class="control-label"></label>
@@ -28,7 +28,7 @@
                 <span asp-validation-for="Musica" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
