--- a/WebApiSF/Views/Musica/Index.cshtml
+++ b/WebApiSF/Views/Musica/Index.cshtml
@@ -7,12 +7,17 @@
     <tr>
         <th>Banda</th>
         <th>Musica</th>
+        <th></th>
     </tr>
     @for (int i = 0; i < Model.Rows.Count;i++) //é como se fosse DataTable
     {
         <tr>
             <td>@Model.Rows[i][1]</td>
             <td>@Model.Rows[i][2]</td>
+            <td>
+                <a href="@Url.Action("Edit", "Musica", new{@id=@Model.Rows[i][0]})">Editar</a>
+                <a href="@Url.Action("Delete", "Musica", new{@id=@Model.Rows[i][0]})">Deletar</a>
+            </td>
         </tr>   
     }
 
